2014-02-18 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	* DBSoap.m
	Get name, type, label and prefix from the object properties.
	Add and uniform accessors for them.

2014-02-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (describeSObject)
	Fix array bounds during retrival of record type names in describe.

2013-12-13 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Store recordTypes in a NSArray and not a mutable array.

2013-11-18 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	delete: accept both Objects as Ids as array content.

2013-11-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m (describeSObject)
	Transition indices to NSUInteger

2013-11-15 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* DBSoap.m
	* Resources/DataBasin.gorm
	Progress indicator and remaining time for Delete op.

2013-10-29 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Fix copyWithZone and no not use NSCopyObject()

2013-10-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Conform to NSCopying and implement copyWithZone.

2013-10-10 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (describeSObject)
	Optimize, by not executing RecordType query if none are present.

2013-10-10 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (describeSObject)
	Handle objects with no record-types.

2013-10-08 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.m
	Change API from fieldValue to valueForField.

2013-09-23 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	* DBSObject.h
	* DBSObject.m
	* DBSoap.m
	Change API from fieldValue to valueForField.

2013-07-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
        In a describe if only one Record Type is present, repackage it correctly by checking class and not just size.

2013-06-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (selectIdentify)
	Fix adding of the solo ORDER BY option.

2013-06-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (selectIdentify)